# FH-STECE2023

./: .gitignore  CMakeLists.txt  NotImportant.txt  README.rst  blink.cpp
CMake/: FindLIBGPIOD.cmake  FindLIBGPIODCXX.cmake
Refactory/: README.md
exercises/: CMakeLists.txt
exercises/anael.wirtl-moelbach/lib/: CMakeLists.txt
exercises/anael.wirtl-moelbach/tests/: CMakeLists.txt
exercises/anto.dzidzic/lib/: CMakeLists.txt  door.cpp  door.h  light-barrier  light-barrier.h  motor.cpp  motor.h  push-button  push-button.cpp  push-button.h
exercises/anto.dzidzic/tests/: CMakeLists.txt  door-tests.cpp  lightbarrier-tests.cpp  motor-tests.cpp  pushbutton-tests.cpp
exercises/benedikt.polivka/lib/: CMakeLists.txt  door.cpp  light-barrier.cpp
exercises/benedikt.polivka/tests/: CMakeLists.txt
exercises/christopher.winter/lib/: CMakeLists.txt
exercises/christopher.winter/tests/: CMakeLists.txt
exercises/door-polymorphic/joerg.faschingbauer/tests/: CMakeLists.txt
exercises/door-polymorphic/johannes.mlinar/lib/: CMakeLists.txt  light-barrier.h  light-barrierMock.cpp  light-barrierMock.h  motor.h  motorMock.cpp  motorMock.h  push-button.h  push-buttonMock.cpp  push-buttonMock.h
exercises/door-polymorphic/roman.tragner/lib/: CMakeLists.txt  door.h  light-barrier-mock.cpp  light-barrier-mock.h  light-barrier.h  motor-mock.cpp  motor-mock.h  motor.h  push-button-mock.cpp  push-button-mock.h  push-button.h
exercises/felix.feistritzer/lib/: CMakeLists.txt  door.cpp
exercises/felix.feistritzer/tests/: CMakeLists.txt  pushbutton-tests.cpp
exercises/joerg.faschingbauer/lib/: CMakeLists.txt  door.cpp  door.h  push-button.h
exercises/joerg.faschingbauer/tests/: CMakeLists.txt  door-tests.cpp
exercises/johannes.mlinar/lib/: CMakeLists.txt  door.cpp  door.h  light-barrier.cpp  light-barrier.h  motor.cpp  motor.h  push-button.cpp  push-button.h
exercises/johannes.mlinar/tests/: CMakeLists.txt  door-tests.cpp  lightbarrier-tests.cpp
exercises/kerstin.amrhein/lib/: CMakeLists.txt  door.cpp
exercises/kerstin.amrhein/tests/: CMakeLists.txt
exercises/kristian.seiner/lib/: CMakeLists.txt  door.cpp  door.h
exercises/kristian.seiner/tests/: CMakeLists.txt
exercises/leo.traussnigg/lib/: CMakeLists.txt  push-button.cpp  push-button.h
exercises/leo.traussnigg/tests/: CMakeLists.txt
exercises/lorenz.kristl/lib/: CMakeLists.txt  door.cpp  motor.h
exercises/lorenz.kristl/tests/: CMakeLists.txt  door-tests.cpp
exercises/lucas.fink/lib/: CMakeLists.txt  door.cpp  door.h  light-barrier.h  motor.h  push-button.cpp  push-button.h
exercises/lucas.fink/tests/: CMakeLists.txt
exercises/lukas.supper/lib/: CMakeLists.txt  push-button.h
exercises/lukas.supper/tests/: CMakeLists.txt
exercises/majdedin.alrashid/lib/: CMakeLists.txt  door.cpp  door.h  light-barrier.cpp  light-barrier.h  (+4 more)
exercises/majdedin.alrashid/tests/: CMakeLists.txt  lightbarrier-tests.cpp  pushbutton-tests.cpp
exercises/marco.froihofer/tests/: CMakeLists.txt
exercises/marcus.teichtmeister/tests/: CMakeLists.txt  door-tests.cpp  lightbarrier-tests.cpp  motor-tests.cpp  pushbutton-tests.cpp
exercises/matthias.winkler/tests/: CMakeLists.txt  door-tests.cpp
exercises/maximilian.hofstaetter/tests/: CMakeLists.txt  lightbarrier-tests.cpp
exercises/melanie.sinnhofer/tests/: CMakeLists.txt  door-tests.cpp  lightbarrier-tests.cpp
exercises/michael.wettl/tests/: CMakeLists.txt  door-tests.cpp  lightbarrier-tests.cpp  motor-tests.cpp  pushbutton-tests.cpp
exercises/paulina.hasenhuettl/tests/: CMakeLists.txt
exercises/roman.tragner/tests/: CMakeLists.txt  door-tests.cpp  lightbarrier-tests.cpp  motor-tests.cpp
exercises/viethung.doan/tests/: CMakeLists.txt  motor-tests.cpp
lib/: CMakeLists.txt  light-barrier.h  push-button-mock.cpp
livehacking/: 2025-10-20.cpp  CMakeLists.txt  defint.cpp  signals.cpp  sizeof.cpp  uninitialized-memory.cpp
livehacking/enum-class/: CMakeLists.txt  problem.cpp  solution.cpp
livehacking/oo-c/c/: CMakeLists.txt  main.c  sensor.c  sensor.h  sensor1.c  sensor1.h  sensor2.c  sensor2.h
livehacking/oo-c/c++/: CMakeLists.txt  main.cpp  sensor.h  sensor1.cpp  sensor1.h  sensor2.cpp  sensor2.h
livehacking/point-c/: main.c
livehacking/point-c++/: main.cpp  point.cpp  point.h
livehacking/poll/: CMakeLists.txt
livehacking/polymorphic-data-logger/: CMakeLists.txt  logger.h  main.cpp  sensor-file.cpp  sensor-file.h  sensor-mock.h  sensor.h
src/: CMakeLists.txt
src/door/: CMakeLists.txt  adc-ads1115.cpp  adc-ads1115.h  adc-mock.cpp  adc-mock.h  adc.h  analog-sensor-event-generator.cpp  analog-sensor-event-generator.h  analog-sensor-mock.cpp  analog-sensor-mock.h  analog-sensor.h  door.cpp  door.h  event-edge-detector.cpp  event-edge-detector.h  input-switch-gpio-sysfs.cpp  input-switch-gpio-sysfs.h  input-switch-gpio.cpp  input-switch-gpio.h  input-switch.h  inputs.cpp  inputs.h  light-barrier-gpio.cpp  light-barrier-gpio.h  light-barrier-mock.cpp  light-barrier-mock.h  light-barrier.h  motor-stepper.cpp  motor-stepper.h  motorLED.cpp  motorLED.h  output-switch-gpio-sysfs.cpp  output-switch-gpio-sysfs.h  output-switch-gpio.cpp  output-switch-gpio.h  output-switch.h  outputs.cpp  outputs.h  pressure-sensor-bmp280.cpp  pressure-sensor-bmp280.h  (+16 more)
src/door/utilities/: CMakeLists.txt  eventloop.cpp
tests/: CMakeLists.txt  adc-ads1115-test.cpp  adc-mock-tests.cpp  bmp280-test.cpp  door-closed-open-tests.cpp  door-init-tests.cpp  door-open-closed-tests.cpp  door-tests.cpp  event-edge-detector-test.cpp  event-edge-detector-tests.cpp  gpio-read-value-loop.cpp  hysteresis_hw_test.cpp  input-output-switch-gpio-sysfs-tests.cpp  input-output-switch-gpio-tests.cpp  input-switch-gpio-tests.cpp  inputs-tests.cpp  light-barrier-gpio-tests.cpp  lightbarrier-polymorphic-tests.cpp  lightbarrier-tests.cpp  motor-polymorphic-tests.cpp  motor-stepper-tests.cpp  motor-tests.cpp  motorLED-tests.cpp  motor_tests.cpp  outputs-tests.cpp  pressure-mock-tests.cpp  pressure_mock_unit.cpp  push-button-gpio-test.cpp  pushbutton-polymorphic-tests.cpp  pushbutton-tests.cpp  timespec-tests.cpp
(+299 files in other folders)
